Add pause/stop options for processing.
- This is convenient when running large processing jobs.
- Also clean up the processor UI.

--- a/vixen/html/css/style.css
+++ b/vixen/html/css/style.css
@@ -115,6 +115,11 @@ p.loading {
     box-shadow:inset 0 0 10px rgba(0,0,0,0.2);
 }
 
+.view-processor {
+    border: solid;
+    border-width: 1px;
+}
+
 .processed {
     color: green;
 }
